# oop_lab_7

lab7/: CMakeLists.txt  main.cpp
lab7/include/editor/: editor.h
lab7/include/npc/: factory.h  npc.h  npc_types.h
lab7/include/observer/: observer.h
lab7/include/visitor/: battle_visitor.h  visitor.h
lab7/src/editor/: editor.cpp
lab7/src/npc/: factory.cpp  npc.cpp  npc_types.cpp
lab7/src/observer/: observer.cpp
lab7/src/visitor/: battle_visitor.cpp
lab7/tests/: tests.cpp
